--- a/src/main/resources/templates/admin-home.html
+++ b/src/main/resources/templates/admin-home.html
@@ -12,7 +12,7 @@
     <p><a href="/residents/add">Add Resident</a></p>
     <p><a href="/staff/add">Add Staff</a></p>
 
-    <p><a href="/fee/generate">Generate Fee</a> </p>
+    <p><a href="/fees/generate">Generate Monthly Fees</a> </p>
 </main>
 <footer>
     <th:block th:include="~{/fragments/footer}"></th:block>
