--- a/src/main/resources/templates/generate-fees.html
+++ b/src/main/resources/templates/generate-fees.html
@@ -11,7 +11,9 @@
     <h1 th:text="${pageTitle}"></h1>
     <hr/>
         <form th:action="@{/fees/generate}" th:method="post">
-
+            <label for="base"> Enter base fee:
+                <input name="base" type="number" id="base" placeholder="Enter base fee">
+            </label>
             <button type="submit">Generate</button>
 
         </form>
