--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,4 +1,5 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+    <div><a href="/">Back to Home</a> </div>
     <p>Domo - Property Management System </p>
     <p><i class="fas fa-code"></i> by sYn &copy; 2021</p>
 </html>
