added manage apartments

--- a/src/main/resources/templates/admin-home.html
+++ b/src/main/resources/templates/admin-home.html
@@ -14,7 +14,7 @@
             <th:block th:unless="${isBuilt}">Construct Building</th:block>
         </a>
     </p>
-    <p><a href="/apartments/add">Add Apartment</a></p>
+    <p><a href="/apartments/manage">Manage Apartments</a></p>
     <p><a href="/residents/add">Add Resident</a></p>
     <p><a href="/staff/add">Add Staff</a></p>
 
