--- a/src/main/resources/templates/details-apartment.html
+++ b/src/main/resources/templates/details-apartment.html
@@ -8,7 +8,10 @@
     <main>
         <h1 th:text="${pageTitle}"></h1>
         <th:block th:object="${apartment}">
-            <p th:text="| Apartment No:*{number} |"></p>
+            <p th:text="| Apartment No:*{number},
+            Floor:  No:*{floorNumber},
+            Number of Pets:  No:*{pets},
+            Residents: |"></p>
         </th:block>
     </main>
     <footer>
