display list of registered residents in /residents/manage

--- a/src/main/resources/templates/admin-home.html
+++ b/src/main/resources/templates/admin-home.html
@@ -15,8 +15,8 @@
         </a>
     </p>
     <p><a href="/apartments/manage">Manage Apartments</a></p>
-    <p><a href="/residents/add">Add Resident</a></p>
-    <p><a href="/staff/add">Add Staff</a></p>
+    <p><a href="/residents/manage">Manage Residents</a></p>
+    <p><a href="/staff/add">Manage Staff</a></p>
 
     <p><a href="/fees/generate">Generate Monthly Fees</a> </p>
 </main>
