--- a/src/main/resources/templates/manage-residents.html
+++ b/src/main/resources/templates/manage-residents.html
@@ -24,6 +24,10 @@
             <input name="email" type="email" id="email" placeholder="Enter email">
         </label>
 
+        <label for="phoneNumber">
+            <input name="phoneNumber" type="text" id="phoneNumber" placeholder="Enter phone number">
+        </label>
+
 <!--        <label for="password">-->
 <!--            <input name="password" type="password" id="password" placeholder="Enter password">-->
 <!--        </label>-->
