--- a/src/main/resources/templates/manage-building.html
+++ b/src/main/resources/templates/manage-building.html
@@ -7,7 +7,8 @@
 <body>
 <main>
     <h1 th:text="${pageTitle}"></h1>
-    <th:block th:unless="${isBuilt}">
+    <th:block th:object="${buildings}">
+
         <form th:action="@{/building/add}" th:method="post">
             <label for="name">
                 <input name="name" type="text" id="name" placeholder="Enter building's name">
@@ -24,11 +25,15 @@
             <button type="submit">Construct building</button>
 
         </form>
-    </th:block>
-    <th:block th:if="${isBuilt}">
-        <p th:text="| Building (address: ${building.getAddress()}) |"></p>
-        <p th:text="| Floors: ${building.getFloors()} |"></p>
-        <p th:text="| Added ${building.getAddedApartments()} apartments |"></p>
+
+        <th:block th:if="${hasBuildings}">
+            <p th:text="|You manage ${buildings.size()} buildings |"></p>
+            <ul>
+                <li th:each="b : ${buildings}" th:text="|
+                ${b.name} (address: ${b.getAddress()}) |"><a href="#">Manage</a></li>
+            </ul>
+        </th:block>
+
     </th:block>
 </main>
 
