--- a/src/main/resources/templates/manage-buildings.html
+++ b/src/main/resources/templates/manage-buildings.html
@@ -33,7 +33,7 @@
         <p th:text="|You manage ${buildings.size()} building(s) |"></p>
         <ul>
             <li th:each="b : ${buildings}">
-                <a th:href="@{/buildings/{buildingName}(buildingName=${b.getName()})}"
+                <a th:href="@{/buildings/{buildingId}(buildingId=${b.getId()})}"
                    th:text="|${b.name} (address: ${b.getAddress()}) |"></a></li>
         </ul>
     </th:block>
