added pets input in manage-apartments.html

--- a/src/main/resources/templates/manage-apartments.html
+++ b/src/main/resources/templates/manage-apartments.html
@@ -21,6 +21,10 @@
         </select>
         </label>
 
+        <label for="pets">
+            <input value="0" name="pets" type="number" id="pets" placeholder="Enter number of pets">
+        </label>
+
         <button type="submit">Add</button>
     </form>
 
