--- a/src/main/resources/templates/details-apartment.html
+++ b/src/main/resources/templates/details-apartment.html
@@ -8,12 +8,19 @@
     <main>
         <h1 th:text="${pageTitle}"></h1>
         <th:block th:object="${apartment}">
-            <p th:text="| Building: ${buildingName}, Apartment No:*{number},
+            <p th:text="| Apartment No: *{number} in ${buildingName},
             Floor: *{floorNumber},
-            Pets: *{pets},
-            Residents: *{residents.size()}|"></p>
+            Pets: *{pets}|"></p>
+
+            <p th:text="|Total residents: *{residents.size()}|"></p>
+
+            <a th:href="@{/buildings/{buildingId}/apartments/{apartmentId}/residents/(buildingId=${buildingId}, apartmentId=${apartmentId})}">
+                <span th:if="${hasResidents}">Manage Residents</span>
+                <span th:unless="${hasResidents}">Add Residents</span>
+            </a>
         </th:block>
     </main>
+    <hr/>
     <footer>
         <th:block th:include="~{/fragments/footer}"></th:block>
     </footer>
