--- a/src/main/resources/templates/manage-residents.html
+++ b/src/main/resources/templates/manage-residents.html
@@ -48,9 +48,9 @@
         <hr/>
         <h3 th:text="${pageH3Title}"></h3>
         <ul>
-            <li th:each="r : ${residents}" th:text="|
-                ${r.apartmentNumber}: ${r.firstName} ${r.lastName} - ${r.email} ${r.phoneNumber}
-            |"></li>
+            <li th:each="r : ${residents}">
+                <a th:href="@{/buildings/{buildingId}/apartments/{apartmentId}/residents/{residentId}(buildingId=${buildingId}, apartmentId=${apartmentId}, residentId=${r.getId()})}" th:text="${r.toString()}"></a>
+            </li>
         </ul>
     </th:block>
 </main>
