added register Resident to Apartment

--- a/src/main/resources/templates/manage-residents.html
+++ b/src/main/resources/templates/manage-residents.html
@@ -28,13 +28,8 @@
             <input name="phoneNumber" type="text" id="phoneNumber" placeholder="Enter phone number">
         </label>
 
-        <label for="apartmentNumber">
-            <select name="apartmentNumber" id="apartmentNumber">
-                <option th:each="number : ${apartmentNumbers}"
-                        th:value="${number}"
-                        th:text="${number}">
-                </option>
-            </select>
+        <label for="apartment">
+            <input name="apartment" type="hidden" id="apartment" th:value="${apartmentId}">
         </label>
 
         <button type="submit">Add Resident</button>
