added details() in ResidentsController

--- a/src/main/resources/templates/manage-residents.html
+++ b/src/main/resources/templates/manage-residents.html
@@ -32,8 +32,8 @@
             <input name="phoneNumber" type="text" id="phoneNumber" placeholder="Enter phone number">
         </label>
 
-        <label for="apartment">
-            <input name="apartment" type="hidden" id="apartment" th:value="${apartmentId}">
+        <label for="apartmentId">
+            <input name="apartmentId" type="hidden" id="apartmentId" th:value="${apartmentId}">
         </label>
 
         <button type="submit">Add Resident</button>
