--- a/src/main/resources/templates/manage-children.html
+++ b/src/main/resources/templates/manage-children.html
@@ -20,8 +20,8 @@
             <input name="lastName" type="text" id="lastName" placeholder="Enter last name">
         </label>
 
-        <label for="apartment">
-            <input name="apartment" type="hidden" id="apartment" th:value="${apartmentId}">
+        <label for="apartmentId">
+            <input name="apartmentId" type="hidden" id="apartmentId" th:value="${apartmentId}">
         </label>
 
         <button type="submit">Add Child</button>
