added custom exceptions

--- a/src/main/resources/templates/manage-buildings.html
+++ b/src/main/resources/templates/manage-buildings.html
@@ -24,12 +24,21 @@
 
         <button type="submit">Add building</button>
 
-        <p th:if="${buildingDetails}" th:text="|Successfully added building ${buildingDetails}|"></p>
-        <p th:if="${alreadyExists}" th:text="|Building ${buildingName} already exists! |"></p>
+        <th:block th:if="${success}">
+            <p th:text="|Successfully added building
+            ${building.getName} with
+            ${building.getFloors().size} floors,
+            address ${building.address} |"></p>
+            <a th:href="@{/buildings/{buildingId}(buildingId=${building.getId()})}" th:text="manage"></a>
+        </th:block>
+
+        <p th:if="${alreadyExists}" th:text="${alreadyExistsMessage}"></p>
 
         <th:block th:if="${isArchived}">
-            <p th:text="|Building ${buildingName} was found in the archve. Do you wish to activate it? |"></p>
-            <p>Yes/No</p>
+            <p th:text="${isArchivedMessage}"></p>
+            <form th:action="@{/buildings/{buildingId}(buildingId=${buildingId})}" th:method="post">
+                <button type="submit">activate</button>
+            </form>
         </th:block>
 
         <p th:if="${error}" th:text="${error}"></p>
@@ -42,7 +51,7 @@
             <li th:each="b : ${buildings}">
                 <a th:href="@{/buildings/{buildingId}(buildingId=${b.getId()})}"
                    th:text="|${b.name} (address: ${b.getAddress()}) |"></a>
-                <form th:action="@{/buildings/{buildingId}(buildingId=${b.getId()})}" th:method="post">
+                <form th:action="@{/buildings/{buildingId}/archive(buildingId=${b.getId()})}" th:method="post">
                     <button type="submit">archive</button>
                 </form>
 
